# pawlib

./: .arcconfig  .arclint  .astylerc  .clang-format  .gitignore  .gitignore.orig  .gitignore_BACKUP_4353  .gitignore_LOCAL_4353  .gitmodules  BUILDING.md  CHANGELOG.md  LICENCE.md  LICENSE.md  Makefile  README.md  build.config.txt  callgrind.out.tB1001.1  callgrind.out.tB1001.2  callgrind.out.tB1001.3  callgrind.out.tB1001.4  callgrind.out.tB1002.1  callgrind.out.tB1002.2  callgrind.out.tB1002.3  callgrind.out.tB1003.1  callgrind.out.tB1003.2  callgrind.out.tB1003.3  default.config  pawlib.kdev4  pawsort_benchmark_round1.txt  pawsort_benchmark_round2.txt  tB1001
.arclibs/cppcheck/: __phutil_library_init__.php
.kdev4/: pawlib.kdev4
cpgf/include/cpgf/: gcallbacklist.h  gcontainer.h
cpgf/include/cpgf/metadata/irrlicht/: meta_irrlicht_IrrCompileConfig.h
cpgf/include/cpgf/private/: gcallback_p.h  gvariant_p.h
cpgf/samples/tween/src/testcases/: testcaseanimation.cpp
cpgf/src/metadata/irrlicht/: meta_irrlicht_plane3d.cpp  meta_irrlicht_vector2d.cpp  meta_irrlicht_vector3d.cpp
cpgf/src/scriptbind/: gbindcommon.cpp  gscriptvalue.cpp
cpgf/test/metagen/metadata/src/: meta_test_metagen_template_classes.cpp
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs/source/core/: flexarray.rst  flexbit.rst  flexmap.rst  flexqueue.rst  flexstack.rst  pool.rst  stdutils.rst  trilean.rst
docs/source/flex/: flexarray.rst  flexqueue.rst  flexstack.rst
docs/source/general/: console.rst  setup.rst  support.rst  tests.rst
docs/source/goldilocks/: goldilocks.rst  shell.rst
docs/source/iochannel/: iochannel.rst
docs/source/onestring/: onestring.rst
docs/source/puppeteerxml/: puppeteerxml.rst
pawlib-source/: CMakeLists.txt  CppCheckResults.xml  Makefile  main.cpp  pawlib-source.kdev4  pawlib.cbp  pawlib.cbp.orig  pawlib.depend  pawlib.layout  pawlib.layout.orig
pawlib-source/.kdev4/: pawlib-source.kdev4
pawlib-source/include/: avl_tree.hpp  base_flex_array.hpp  binconv.hpp  core_types.hpp  core_types_tests.hpp  flex_array.hpp  flex_array_tests.hpp  flex_bit.hpp  flex_bit_tests.hpp  flex_map.hpp  flex_queue.hpp  flex_queue_tests.hpp  flex_stack.hpp  flex_stack_tests.hpp  goldilocks.hpp  iochannel.hpp  map.hpp  onechar.hpp  onestring.hpp  onestring_tests.hpp  onestringbase.hpp  pawsort.hpp  pawsort_tests.hpp  pawstring.hpp  pawstring_tests.hpp  pool.hpp  pool_tests.hpp  queue.hpp  quickstring.hpp  rigid_stack.hpp  singly_linked_list.hpp  stack.hpp  stdutils.h  stdutils.hpp  testsuite.hpp
pawlib-source/include/pawlib/: avl_tree.hpp  base_flex_array.hpp  binconv.hpp  constants.hpp  core_types.hpp  core_types_tests.hpp  flex_array.hpp  flex_array_tests.hpp  flex_bit.hpp  flex_bit_tests.hpp  flex_map.hpp  flex_queue.hpp  flex_queue_tests.hpp  flex_stack.hpp  flex_stack_tests.hpp  goldilocks.hpp  goldilocks_assertions.hpp  goldilocks_shell.hpp  iochannel.hpp  onechar.hpp  onechar_tests.hpp  onestring.hpp  onestring_tests.hpp  onestringbase.hpp  pawsort.hpp  pawsort_tests.hpp  pool.hpp  pool_tests.hpp  quickstring.hpp  rigid_stack.hpp  singly_linked_list.hpp  stdutils.hpp
pawlib-source/include/pawlib/iterator/: base_iterator.hpp
pawlib-source/src/: binconv.cpp  core_types.cpp  core_types_tests.cpp  flex_array_tests.cpp  flex_bit_tests.cpp  flex_queue_tests.cpp  flex_stack_tests.cpp  goldilocks.cpp  goldilocks_shell.cpp  iochannel.cpp  onechar.cpp  onechar_tests.cpp  onestring.cpp  onestring_tests.cpp  onestringbase.cpp  pawsort_tests.cpp  pawstring.cpp  pawstring_tests.cpp  pool_tests.cpp  quickstring.cpp  stdutils.cpp  testsuite.cpp
pawlib-tester/: CMakeLists.txt  Makefile  ValgrindOut.xml  main.cpp  pawlib-tester.cbp  pawlib-tester.depend  pawlib-tester.layout
pawlib-tester/include/: TestSystem.hpp
pawlib-tester/src/: TestSystem.cpp
pawlib/Debug32/include/: iochannel.hpp  stdutils.h
pawlib/Debug64/include/: iochannel.hpp
pawlib/Release64/include/: iochannel.hpp  stdutils.h
